[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Meshes/pistol.glb" type="PackedScene" id=1]
[ext_resource path="res://Assets/Materials/shotgun_blast.tres" type="Material" id=2]
[ext_resource path="res://Assets/Meshes/shotgun_muzzle_flash.obj" type="ArrayMesh" id=4]
[ext_resource path="res://Assets/Materials/pistol_grip.tres" type="Material" id=5]
[ext_resource path="res://Assets/Materials/pistol.tres" type="Material" id=6]
[ext_resource path="res://Assets/Audio/Shotgun/shotgun_dry_fire.wav" type="AudioStream" id=7]
[ext_resource path="res://Weapons/Pistol.gd" type="Script" id=8]
[ext_resource path="res://Assets/Materials/vines.tres" type="Material" id=9]
[ext_resource path="res://Assets/Audio/Pistol/395789__nioczkus__darkscape-1911-a1.wav" type="AudioStream" id=10]

[sub_resource type="SphereMesh" id=4]
material = ExtResource( 9 )
radius = 0.06
height = 0.12
radial_segments = 8
rings = 4

[sub_resource type="Animation" id=2]
length = 0.4
step = 0.001
tracks/0/type = "audio"
tracks/0/path = NodePath("../AudioManager/PistolFire")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 10 )
} ],
"times": PoolRealArray( 0 )
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="QuadMesh" id=3]
material = ExtResource( 2 )

[node name="Pistol" instance=ExtResource( 1 )]
script = ExtResource( 8 )
RELOAD_TIME_MID = 0.1
DEFAULT_TRANSFORM = Transform( -0.919, -0.39, -0.058, -0.081, 0.043, 0.996, -0.386, 0.92, -0.071, -0.005, 0.033, 0.005 )

[node name="Pistol" parent="." index="0"]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0, 0 )

[node name="Model001" parent="Pistol/Skeleton" index="0"]
material/0 = ExtResource( 6 )
material/1 = ExtResource( 5 )

[node name="PistolPoint" type="Spatial" parent="." index="2"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.0379041, 0.0799637 )

[node name="Crosshair" type="SpringArm" parent="PistolPoint" index="0"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -7.45058e-09 )
collision_mask = 30
spring_length = 100.0

[node name="MeshInstance" type="MeshInstance" parent="PistolPoint/Crosshair" index="0"]
transform = Transform( 1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = null

[node name="MuzzleFlash" type="Spatial" parent="." index="3"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.0373001, 0.100058 )
visible = false

[node name="Graphics" type="MeshInstance" parent="MuzzleFlash" index="0"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.05, -0.000741959, 2.98023e-08, -0.00178558 )
mesh = ExtResource( 4 )
material/0 = ExtResource( 2 )

[node name="OmniLight" type="OmniLight" parent="MuzzleFlash" index="1"]
light_color = Color( 1, 0.929412, 0.741176, 1 )
light_energy = 1.2
omni_range = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="MuzzleFlash" index="2"]
anims/Fire = SubResource( 2 )

[node name="AudioManager" type="Spatial" parent="." index="4"]

[node name="PistolFire" type="AudioStreamPlayer3D" parent="AudioManager" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0364978, 0.0997076 )
stream = ExtResource( 10 )
unit_db = -2.0
unit_size = 10.0
max_db = 1.0

[node name="PistolDryFire" type="AudioStreamPlayer3D" parent="AudioManager" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0326622, -0.00787097 )
stream = ExtResource( 7 )
unit_db = 1.0
unit_size = 10.0
max_db = 1.0

[node name="ShaderCache" type="Spatial" parent="." index="5"]

[node name="shotgunblast_shader" type="MeshInstance" parent="ShaderCache" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.550864, 0, 1.11229 )
mesh = SubResource( 3 )
material/0 = null

[node name="ReloadTimer" type="Timer" parent="." index="6"]

[connection signal="timeout" from="ReloadTimer" to="." method="_on_anim_timeout"]
